--- a/appinfoservice/src/main/resources/templates/htmlForm.html
+++ b/appinfoservice/src/main/resources/templates/htmlForm.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Hello</title>
 </head>
 <body>
-$END$
+    <p>Hello world</p>
+    <ul>
+        <li>This is springboot</li>
+        <li>This is generating pdf</li>
+    </ul>
 </body>
 </html>
