--- a/appinfoservice/src/main/resources/templates/htmlForm.html
+++ b/appinfoservice/src/main/resources/templates/htmlForm.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <p>Hello world</p>
+    <h3 style="text-align: center; color: green">
+        <span th:text="'Welcome to ' + ${to} + '!'"></span>
+    </h3>
     <ul>
         <li>This is springboot</li>
         <li>This is generating pdf</li>
